[[whats-new]]
== What's New

=== Changes in 3.0 Since 2.4

==== Java 17, Spring Framework 6.0

This version requires Spring Framework 6.0 and Java 17

==== Remoting

The remoting feature (using RMI) is no longer supported.

See <<remoting>> for alternatives.