@@ -11,4 +11,7 @@ This version requires Spring Framework 6.0 and Java 17
 
 The remoting feature (using RMI) is no longer supported.
 
-See <<remoting>> for alternatives.
+==== Message Converter Changes
+
+The `Jackson2JsonMessageConverter` can now determine the charset from the `contentEncoding` header.
+See <<json-message-converter>> for more information.
